[tool.poetry]
name = "ELF_RSS"
version = "3.0.0"
description = "QQ机器人 RSS订阅 插件，订阅源建议选择 RSSHub"
authors = ["Quan666 <i@Rori.eMail>"]
license = "GPL-3.0-only"
readme = "README.md"
packages = [
    { include = "nonebot_plugin_rss", from = "src" },
]
homepage = "https://github.com/Quan666/ELF_RSS"
repository = "https://github.com/Quan666/ELF_RSS"
keywords = ["nonebot", "nonebot2", "rss" ,"elf" ,"rsshub"]

[tool.poetry.dependencies]
python = "^3.8.3"
arrow = "^1.3.0"
async-timeout = "^4.0.3"
bbcode = "^1.1.0"
cachetools = "^5.3.1"
deep-translator = "^1.11.4"
emoji = "^2.8.0"
feedparser = "^6.0.10"
ImageHash = "^4.3.1"
nonebot2 = {extras = ["fastapi", "httpx", "websockets"], version = "^2.1.1"}
nonebot-plugin-alconna = "^0.30.6"
nonebot-plugin-apscheduler = "^0.3.0"
nonebot-plugin-datastore = "^1.1.2"
Pillow = "^10.1.0"
pydantic = "^1.10.13"
pyquery = "^2.0.0"
tenacity = "^8.2.3"
yarl = "^1.9.2"

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.275"
isort = "^5.10.1"
black = "^23.1.0"
pre-commit = "^3.2.2"

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310", "py311"]
include = '\.pyi?$'
extend-exclude = '''
'''

[tool.isort]
profile = "black"
line_length = 88
length_sort = true
skip_gitignore = true
force_sort_within_sections = true
extra_standard_library = ["typing_extensions"]

[tool.ruff]
select = ["E", "W", "F", "UP", "C", "T", "PYI", "PT", "Q"]

line-length = 88
target-version = "py38"

[tool.ruff.flake8-pytest-style]
fixture-parentheses = false
mark-parentheses = false

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"